# KERI-Under-Scrutiny-Master-Thesis

./: README.md
amazon-aws/: main.py
basic-kel/: .gitignore  Cargo.toml
basic-kel/config/: CH_wat_01_dev.yml  CH_wat_02_dev.yml  CH_wat_03_dev.yml  CH_wat_04_dev.yml  CH_wat_05_dev.yml  CH_wat_06_dev.yml  CH_wit_01_dev.yml  CH_wit_02_dev.yml  CH_wit_03_dev.yml  CH_wit_04_dev.yml  CH_wit_05_dev.yml  CH_wit_06_dev.yml  nodesConfigs.json  watcher.yml  watcherConfigs.json  watcher_01.yml  wit_wat_keypairs.json  witnessConfigs.json  witness_01.yml  witness_02.yml
basic-kel/src/: helpers.rs  infra-test.rs  issuer.rs  logger.sh  main.rs  start-infra.sh  tests.rs
experiments/: tests_time.py  watchers.py  witnesses.py
experiments/240813-10:42/: 0813-10:42.json
experiments/240813-10:49/: 0813-10:49.json
experiments/240813-10:54/: 0813-10:54.json
experiments/240813-11:35/: 0813-11:35.json
experiments/240813-11:42/: 0813-11:42.json
experiments/240813-12:08/: 0813-12:08.json
experiments/240813-12:15/: 0813-12:15.json
experiments/240813-12:21/: 0813-12:21.json
experiments/240813-12:53/: 0813-12:53.json
experiments/240813-13:33/: 0813-13:33.json
experiments/240813-13:48/: 0813-13:48.json
experiments/240813-13:54/: 0813-13:54.json
experiments/240813-14:00/: 0813-14:00.json
experiments/240813-14:07/: 0813-14:07.json
experiments/240813-14:20/: 0813-14:20.json
experiments/240813-14:25/: 0813-14:25.json
experiments/240813-14:31/: 0813-14:31.json
experiments/240813-14:45/: 0813-14:45.json
experiments/240813-15:40/: 0813-15:40.json
experiments/240813-15:46/: 0813-15:46.json
experiments/240813-15:56/: 0813-15:56.json
(+10546 files in other folders)
