[package]
name = "basic_kel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[[bin]]
#name = "simple-test"
#path = "src/simple-test.rs"

#[[bin]]
#name = "simple-infrastructure-multisig"
#path = "src/simple-infrastructure-multisig.rs"

#[[bin]]
#name = "simple-issuance-tel"
#path = "src/simple-issuance-tel.rs"

[[bin]]
name = "infra"
path = "src/infra-test.rs"

[[bin]]
name = "tests"
path = "src/tests.rs"

[[bin]]
name = "issuer"
path = "src/issuer.rs"

#[[bin]]
#name = "collect_data"
#path = "src/collect_data.rs"


[[bin]]
name = "test"
path = "src/watcher-oobi-test.rs"

[dependencies]
keri-controller = {path = "/home/icn-temp/Documents/keriox/components/controller/"}
keri-core = {path = "/home/icn-temp/Documents/keriox/keriox_core/"}
#keri-core = "0.10.0"
#keri-controller = "0.3.0"
acdc = {path = "/home/icn-temp/Documents/acdc-rust/"}
said = { version = "0.4.0", features = ["macros"]  }
tempfile = "3.10.1"
async-std = "1.12.0"
url = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"]}
tokio-util = "0.7.11"
rand = "0.8"
colored = "2.1.0"
openssl = { version = "0.10", features = ["vendored"] }
simple-server = "0.3.0"
reqwest = { version = "0.12.4", features = ["json"] }
regex = "1"
chrono = "0.4.38"
indicatif = "0.17.8"
serde_urlencoded = "0.7"

### Here for testing 
[profile.release]
# Enable static linking
lto = true
opt-level = 's'  # Or adjust optimization level as needed
debug = false